# notebook

./: Cargo.toml  Readme.md
client/: index.html  package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx  Block.css  Block.tsx  Notebook.tsx  api.ts  index.css  main.tsx  types.ts
client/src/api/: api.ts  ws.ts
client/src/components/: App.tsx  Block.tsx  CodeCell.tsx  MarkdownCell.tsx  Notebook.tsx
client/src/core/: notebook.ts
client/src/notebookView/: Cell.css  Cell.tsx  Notebook.tsx  types.ts
client/src/store/: cellSlice.ts  counterSlice.ts  store.ts  wsSlice.ts
client/src/types/: cell.d.ts  cellTypes.ts  notebook.d.ts
client/src/utils/: api.ts  editorTheme.css  ws.ts
kernel/: Pipfile
kernel/src/: eval.py  exec.py  main.py  run.py
src/: cell.rs  main.rs  notebook.rs  topology.rs  traits.rs
src/api/: index.rs  mod.rs  reorder.rs  routes.rs  state.rs  ws.rs  ws_client.rs
src/core/: cell.rs  errors.rs  graph.rs  kernel.rs  kernel_client.rs  mod.rs  notebook.rs  parser.rs  statement.rs  statement_pos.rs  topology.rs
src/kernel/: kernel_client.rs  mod.rs
src/kernel/src/: main.py
